add unique ids to clip-paths in footer icons

--- a/src/hero-profile--estimate.html
+++ b/src/hero-profile--estimate.html
@@ -70,19 +70,19 @@
                             <div class="followers-list__icon">
                               <!-- START: followers-instagram.svg -->
                               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <g clip-path="url(#clip0)">
+                                <g clip-path="url(#followers-instagram-clip0)">
                                 <path d="M6.83384 22.8311C12.8156 25.6842 19.9778 23.148 22.831 17.1662C25.6842 11.1844 23.1479 4.02218 17.1661 1.169C11.1843 -1.68417 4.02213 0.852083 1.16895 6.83389C-1.68423 12.8157 0.85203 19.9779 6.83384 22.8311Z" fill="#DD2A7B"/>
-                                <g clip-path="url(#clip1)">
+                                <g clip-path="url(#followers-instagram-clip1)">
                                 <path d="M14.8125 4.5H9.1875C6.59906 4.5 4.5 6.59906 4.5 9.1875V14.8125C4.5 17.4009 6.59906 19.5 9.1875 19.5H14.8125C17.4009 19.5 19.5 17.4009 19.5 14.8125V9.1875C19.5 6.59906 17.4009 4.5 14.8125 4.5ZM18.0938 14.8125C18.0938 16.6219 16.6219 18.0938 14.8125 18.0938H9.1875C7.37812 18.0938 5.90625 16.6219 5.90625 14.8125V9.1875C5.90625 7.37812 7.37812 5.90625 9.1875 5.90625H14.8125C16.6219 5.90625 18.0938 7.37812 18.0938 9.1875V14.8125Z" fill="white"/>
                                 <path d="M12 8.25C9.92906 8.25 8.25 9.92906 8.25 12C8.25 14.0709 9.92906 15.75 12 15.75C14.0709 15.75 15.75 14.0709 15.75 12C15.75 9.92906 14.0709 8.25 12 8.25ZM12 14.3438C10.7081 14.3438 9.65625 13.2919 9.65625 12C9.65625 10.7072 10.7081 9.65625 12 9.65625C13.2919 9.65625 14.3438 10.7072 14.3438 12C14.3438 13.2919 13.2919 14.3438 12 14.3438Z" fill="white"/>
                                 <path d="M16.0312 8.46843C16.3072 8.46843 16.5309 8.24471 16.5309 7.96874C16.5309 7.69277 16.3072 7.46906 16.0312 7.46906C15.7552 7.46906 15.5315 7.69277 15.5315 7.96874C15.5315 8.24471 15.7552 8.46843 16.0312 8.46843Z" fill="white"/>
                                 </g>
                                 </g>
                                 <defs>
-                                <clipPath id="clip0">
+                                <clipPath id="followers-instagram-clip0">
                                 <rect width="24" height="24" fill="white"/>
                                 </clipPath>
-                                <clipPath id="clip1">
+                                <clipPath id="followers-instagram-clip1">
                                 <rect width="15" height="15" fill="white" transform="translate(4.5 4.5)"/>
                                 </clipPath>
                                 </defs>
@@ -283,7 +283,7 @@
                   <a class="social-link-list__link" href="/" title="Instagram">
                     <!-- START: social-instagram.svg -->
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                      <g clip-path="url(#clip0)">
+                      <g clip-path="url(#social-instagram-clip0)">
                         <path
                           d="M20 39.9975C31.0457 39.9975 40 31.0432 40 19.9975C40 8.9518 31.0457 -0.00250244 20 -0.00250244C8.95431 -0.00250244 0 8.9518 0 19.9975C0 31.0432 8.95431 39.9975 20 39.9975Z"
                           fill="#FF9500"
@@ -296,7 +296,7 @@
                           d="M20 40C31.0457 40 40 31.0457 40 20C40 8.95431 31.0457 0 20 0C8.95431 0 0 8.95431 0 20C0 31.0457 8.95431 40 20 40Z"
                           fill="#FF9500"
                         ></path>
-                        <g clip-path="url(#clip1)">
+                        <g clip-path="url(#social-instagram-clip1)">
                           <path
                             d="M24.6875 7.5H15.3125C10.9984 7.5 7.5 10.9984 7.5 15.3125V24.6875C7.5 29.0016 10.9984 32.5 15.3125 32.5H24.6875C29.0016 32.5 32.5 29.0016 32.5 24.6875V15.3125C32.5 10.9984 29.0016 7.5 24.6875 7.5ZM30.1562 24.6875C30.1562 27.7031 27.7031 30.1562 24.6875 30.1562H15.3125C12.2969 30.1562 9.84375 27.7031 9.84375 24.6875V15.3125C9.84375 12.2969 12.2969 9.84375 15.3125 9.84375H24.6875C27.7031 9.84375 30.1562 12.2969 30.1562 15.3125V24.6875Z"
                             fill="white"
@@ -312,10 +312,10 @@
                         </g>
                       </g>
                       <defs>
-                        <clipPath id="clip0">
+                        <clipPath id="social-instagram-clip0">
                           <path d="M0 0H40V40H0V0Z" fill="white"></path>
                         </clipPath>
-                        <clipPath id="clip1">
+                        <clipPath id="social-instagram-clip1">
                           <rect
                             x="7.5"
                             y="7.5"
@@ -333,7 +333,7 @@
                   <a class="social-link-list__link" href="/" title="Twitter">
                     <!-- START: social-twitter.svg -->
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                      <g clip-path="url(#clip0)">
+                      <g clip-path="url(#social-twitter-clip0)">
                         <path
                           d="M20 40.0002C31.0457 40.0002 40 31.0458 40 20.0001C40 8.95437 31.0457 4.57764e-05 20 4.57764e-05C8.95432 4.57764e-05 0 8.95437 0 20.0001C0 31.0458 8.95432 40.0002 20 40.0002Z"
                           fill="#EB922F"
@@ -344,7 +344,7 @@
                         ></path>
                       </g>
                       <defs>
-                        <clipPath id="clip0">
+                        <clipPath id="social-twitter-clip0">
                           <path d="M0 0H40V40H0V0Z" fill="white"></path>
                         </clipPath>
                       </defs>
