--- a/src/reset-password--success.html
+++ b/src/reset-password--success.html
@@ -148,7 +148,7 @@
                   <a class="social-link-list__link" href="/" title="Instagram">
                     <!-- START: social-instagram.svg -->
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                      <g clip-path="url(#clip0)">
+                      <g clip-path="url(#social-instagram-clip0)">
                         <path
                           d="M20 39.9975C31.0457 39.9975 40 31.0432 40 19.9975C40 8.9518 31.0457 -0.00250244 20 -0.00250244C8.95431 -0.00250244 0 8.9518 0 19.9975C0 31.0432 8.95431 39.9975 20 39.9975Z"
                           fill="#FF9500"
@@ -161,7 +161,7 @@
                           d="M20 40C31.0457 40 40 31.0457 40 20C40 8.95431 31.0457 0 20 0C8.95431 0 0 8.95431 0 20C0 31.0457 8.95431 40 20 40Z"
                           fill="#FF9500"
                         ></path>
-                        <g clip-path="url(#clip1)">
+                        <g clip-path="url(#social-instagram-clip1)">
                           <path
                             d="M24.6875 7.5H15.3125C10.9984 7.5 7.5 10.9984 7.5 15.3125V24.6875C7.5 29.0016 10.9984 32.5 15.3125 32.5H24.6875C29.0016 32.5 32.5 29.0016 32.5 24.6875V15.3125C32.5 10.9984 29.0016 7.5 24.6875 7.5ZM30.1562 24.6875C30.1562 27.7031 27.7031 30.1562 24.6875 30.1562H15.3125C12.2969 30.1562 9.84375 27.7031 9.84375 24.6875V15.3125C9.84375 12.2969 12.2969 9.84375 15.3125 9.84375H24.6875C27.7031 9.84375 30.1562 12.2969 30.1562 15.3125V24.6875Z"
                             fill="white"
@@ -177,10 +177,10 @@
                         </g>
                       </g>
                       <defs>
-                        <clipPath id="clip0">
+                        <clipPath id="social-instagram-clip0">
                           <path d="M0 0H40V40H0V0Z" fill="white"></path>
                         </clipPath>
-                        <clipPath id="clip1">
+                        <clipPath id="social-instagram-clip1">
                           <rect
                             x="7.5"
                             y="7.5"
@@ -198,7 +198,7 @@
                   <a class="social-link-list__link" href="/" title="Twitter">
                     <!-- START: social-twitter.svg -->
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                      <g clip-path="url(#clip0)">
+                      <g clip-path="url(#social-twitter-clip0)">
                         <path
                           d="M20 40.0002C31.0457 40.0002 40 31.0458 40 20.0001C40 8.95437 31.0457 4.57764e-05 20 4.57764e-05C8.95432 4.57764e-05 0 8.95437 0 20.0001C0 31.0458 8.95432 40.0002 20 40.0002Z"
                           fill="#EB922F"
@@ -209,7 +209,7 @@
                         ></path>
                       </g>
                       <defs>
-                        <clipPath id="clip0">
+                        <clipPath id="social-twitter-clip0">
                           <path d="M0 0H40V40H0V0Z" fill="white"></path>
                         </clipPath>
                       </defs>
