add rest Reset Password related pages

--- a/src/reset-password-enter-email--success.html
+++ b/src/reset-password-enter-email--success.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Reset password - Complete | Playhero</title>
+    <title>Reset password - Enter Email - Success | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -45,28 +45,27 @@
         <div class="page__content-container">
           <div class="single-boxed-section">
             <div class="single-boxed-section__box">
-              <div class="form-box">
-                <div class="form-box__title"><b>Change</b> Password</div>
-                <div class="form-box__fields">
-                  <div class="form-field form-field--has-value form-field--has-prefix">
-                    <div class="form-field__prefix">
-                      <!-- START: field-email.svg -->
-                      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2.13335 2H13.8667C14.6734 2 15.3334 2.675 15.3334 3.5V12.5C15.3334 13.325 14.6734 14 13.8667 14H2.13335C1.32669 14 0.666687 13.325 0.666687 12.5V3.5C0.666687 2.675 1.32669 2 2.13335 2Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M15.3334 3.5L8.00002 8.75L0.666687 3.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                      <!-- END: field-email.svg -->
-                    </div>
-                    <input type="text" class="form-field__input" placeholder="Email Address" required value="email@address.com" />
-                  </div>
+              <div class="message-box">
+                <div class="message-box__icon">
+                  <!-- START: circle-tick.svg -->
+                  <svg width="80" height="81" viewBox="0 0 80 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0)">
+                    <path d="M40 0.5C32.0887 0.5 24.3552 2.84596 17.7772 7.24122C11.1992 11.6365 6.07235 17.8836 3.04484 25.1927C0.0173371 32.5017 -0.774804 40.5444 0.768605 48.3036C2.31201 56.0629 6.12164 63.1902 11.7157 68.7843C17.3098 74.3784 24.4372 78.188 32.1964 79.7314C39.9556 81.2748 47.9983 80.4827 55.3073 77.4552C62.6164 74.4277 68.8635 69.3008 73.2588 62.7228C77.654 56.1448 80 48.4112 80 40.5C79.969 29.9009 75.7447 19.7448 68.25 12.25C60.7553 4.75527 50.5991 0.531025 40 0.5ZM31.7885 61.8269L11.2885 41.3269L17.0385 35.5769L31.8077 50.3462L62.9808 19.1731L68.7308 24.9231L31.7885 61.8269Z" fill="#1EA26B"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0">
+                    <rect width="80" height="80" fill="white" transform="translate(0 0.5)"/>
+                    </clipPath>
+                    </defs>
+                  </svg>
+                  <!-- END: circle-tick.svg -->
                 </div>
-                <div class="form-box__actions">
-                  <button class="primary-button primary-button--solid" type="submit">Send</button>
-                </div>
+                <div class="message-box__title">Check Your Email!</div>
+                <div class="message-box__content">We’ve just sent you an email.<br />Click the link to change your password</div>
               </div>
             </div>
             <div class="single-boxed-section__decor">
-              <img class="single-boxed-section__decor-image" src="./assets/reset-password.svg" />
+              <img class="single-boxed-section__decor-image" src="./assets/success-reset-password.svg" />
             </div>
           </div>
         </div>
