--- a/src/reset-password-new-password.html
+++ b/src/reset-password-new-password.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Reset password | Playhero</title>
+    <title>Reset password - New Password | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -50,18 +50,18 @@
                 <div class="form-box__fields">
                   <div class="form-field form-field--has-prefix">
                     <div class="form-field__prefix">
-                      <!-- START: field-email.svg -->
+                      <!-- START: field-password.svg -->
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2.13335 2H13.8667C14.6734 2 15.3334 2.675 15.3334 3.5V12.5C15.3334 13.325 14.6734 14 13.8667 14H2.13335C1.32669 14 0.666687 13.325 0.666687 12.5V3.5C0.666687 2.675 1.32669 2 2.13335 2Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M15.3334 3.5L8.00002 8.75L0.666687 3.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12.6667 7.26672H3.33333C2.59695 7.26672 2 7.92337 2 8.73339V13.8667C2 14.6767 2.59695 15.3334 3.33333 15.3334H12.6667C13.403 15.3334 14 14.6767 14 13.8667V8.73339C14 7.92337 13.403 7.26672 12.6667 7.26672Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M4.66669 7.26669V4.33335C4.66669 3.36089 5.01788 2.42826 5.643 1.74063C6.26812 1.053 7.11597 0.666687 8.00002 0.666687C8.88408 0.666687 9.73192 1.053 10.357 1.74063C10.9822 2.42826 11.3334 3.36089 11.3334 4.33335V7.26669" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg>
-                      <!-- END: field-email.svg -->
+                      <!-- END: field-password.svg -->
                     </div>
-                    <input type="text" class="form-field__input" placeholder="Email Address" required />
+                    <input type="password" class="form-field__input" placeholder="Enter new password" required />
                   </div>
                 </div>
                 <div class="form-box__actions">
-                  <button class="primary-button primary-button--solid" type="submit" disabled>Send</button>
+                  <button class="primary-button primary-button--solid" type="submit" disabled>Confirm</button>
                 </div>
               </div>
             </div>
