--- a/src/reset-password-new-password--success.html
+++ b/src/reset-password-new-password--success.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Reset password - Success | Playhero</title>
+    <title>Reset password - New password - Success | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -60,8 +60,11 @@
                   </svg>
                   <!-- END: circle-tick.svg -->
                 </div>
-                <div class="message-box__title">Check Your Email!</div>
-                <div class="message-box__content">We’ve just sent you an email.<br />Click the link to change your password</div>
+                <div class="message-box__title">Password Set!</div>
+                <div class="message-box__content">Great! Your password has been successfully changed.</div>
+                <div class="message-box__actions">
+                  <a href="#" class="primary-button primary-button--solid" type="submit">Home</a>
+                </div>
               </div>
             </div>
             <div class="single-boxed-section__decor">
