add promo image specifically for mobile

--- a/src/images.html
+++ b/src/images.html
@@ -51,11 +51,17 @@
               <div class="images__item images__item--promo-media-bg_desktop-min">
                 <span class="images__label">desktop-min</span>
               </div>
-              <div class="images__item images__item--promo-media-bg_mobile-tablets-max">
-                <span class="images__label">mobile-tablets-max</span>
+              <div class="images__item images__item--promo-media-bg_mobile-max">
+                <span class="images__label">mobile-max</span>
               </div>
-              <div class="images__item images__item--promo-media-bg_mobile-tablets-min">
-                <span class="images__label">mobile-tablets-min</span>
+              <div class="images__item images__item--promo-media-bg_mobile-min">
+                <span class="images__label">mobile-min</span>
+              </div>
+              <div class="images__item images__item--promo-media-bg_tablets-max">
+                <span class="images__label">tablets-max</span>
+              </div>
+              <div class="images__item images__item--promo-media-bg_tablets-min">
+                <span class="images__label">tablets-min</span>
               </div>
             </div>
             <div class="images__title">Promo background — Home page</div>
