--- a/src/contact--invalid-complete.html
+++ b/src/contact--invalid-complete.html
@@ -259,7 +259,7 @@
           </div>
         </div>
       </div>
-      <div class="page__mobile-menu">
+      <div class="page__mobile-toolbar">
         <ul class="toolbar-menu">
           <li>
             <a
