--- a/src/hero-profile--sold-out.html
+++ b/src/hero-profile--sold-out.html
@@ -392,7 +392,10 @@
           </div>
         </div>
       </div>
-      <div class="page__mobile-menu">
+      <div class="page__mobile-toolbar">
+        <div class="page__mobile-toolbar-cta">
+          <button type="button" id="purchase-submit-button-cta" class="primary-button primary-button--solid">Book</button>
+        </div>
         <ul class="toolbar-menu">
           <li>
             <a
