--- a/src/index.html
+++ b/src/index.html
@@ -527,7 +527,7 @@
           </div>
         </div>
       </div>
-      <div class="page__mobile-menu">
+      <div class="page__mobile-toolbar">
         <ul class="toolbar-menu">
           <li>
             <a
