replace Book button in toolbar with Purchase CTA component

--- a/src/hero-profile--sold-out.html
+++ b/src/hero-profile--sold-out.html
@@ -394,7 +394,15 @@
       </div>
       <div class="page__mobile-toolbar">
         <div class="page__mobile-toolbar-cta">
-          <button type="button" id="purchase-submit-button-cta" class="primary-button primary-button--solid">Book</button>
+          <div class="purchase-cta">
+            <div class="purchase-cta__content">
+              <div class="purchase-cta__price">£120</div>
+              <div class="purchase-cta__price-note">60 minutes</div>
+            </div>
+            <div class="purchase-cta__actions">
+              <button type="button" id="purchase-submit-button-cta" class="primary-button primary-button--solid">Book</button>
+            </div>
+          </div>
         </div>
         <ul class="toolbar-menu">
           <li>
