--- a/src/confirmation.html
+++ b/src/confirmation.html
@@ -44,7 +44,7 @@
       </div>
       <div class="page__content">
         <div class="page__content-container">
-          <div class="promo-media">
+          <div class="promo-media promo-media--fortnite">
             <div class="promo-media__text">
               You’re playing with <b>Hero Name</b>! 🎉
             </div>
