--- a/src/index--loading.html
+++ b/src/index--loading.html
@@ -44,7 +44,7 @@
       </div>
       <div class="page__content">
         <div class="page__content-container">
-          <div class="promo-media">
+          <div class="promo-media promo-media--fortnite">
             <div class="promo-media__text">
               Play your <b>hero</b> on your favourite game.
             </div>
