update Scheduling pages

--- a/src/scheduling--choose-game.html
+++ b/src/scheduling--choose-game.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="hero-scheduling__steps">
                   <div class="scheduling-steps">
-                    <div class="scheduling-steps__step scheduling-steps__step--active">
+                    <div class="scheduling-steps__step scheduling-steps__step--fixed scheduling-steps__step--active">
                       <div class="scheduling-steps__title">Choose Game</div>
                       <div class="scheduling-steps__description">Which game would you like to play?</div>
                       <div class="scheduling-steps__content">
@@ -121,7 +121,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="scheduling-steps__step scheduling-steps__step--disabled">
+                    <div class="scheduling-steps__step scheduling-steps__step--fixed scheduling-steps__step--disabled">
                       <div class="scheduling-steps__title">Choose Day</div>
                       <div class="scheduling-steps__description">Below are the days the hero is available.</div>
                       <div class="scheduling-steps__content">
@@ -320,17 +320,6 @@
         </div>
       </div>
       <div class="page__mobile-toolbar">
-        <div class="page__mobile-toolbar-cta">
-          <div class="purchase-cta">
-            <div class="purchase-cta__content">
-              <div class="purchase-cta__price">$120</div>
-              <div class="purchase-cta__price-note">60 minutes</div>
-            </div>
-            <div class="purchase-cta__actions">
-              <button type="button" id="purchase-submit-button-cta" class="primary-button primary-button--solid">Book</button>
-            </div>
-          </div>
-        </div>
         <ul class="toolbar-menu">
           <li>
             <a
